# rootos

./: Cargo.toml  README.md  aarch64-unknown-none.json  linker.ld  memory.x  run_qemu.sh  run_rootos.sh
src/: allocator.rs  boot.s  main.rs
