[package]
name = "rootos"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"

[build-dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
rustflags = ["-C", "link-arg=-Tmemory.x"]
target = "aarch64-unknown-none.json"

[patch.crates-io]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins.git" }
